# prepare-commit-msg-hooks

./: .coveragerc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pre-commit-config.yaml  setup.cfg
prepare_commit_msg_hooks/: add_branch_name.py
tests/: test_add_branch_name.py
