[metadata]
name = parepare_commit_msg_hooks
version = 0.0.1
description = Hooks for prepare-commit-msg.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/macfernandez/prepare-commit-msg-hooks
author = Macarena Fernandez Urquiza
author_email = m.fernandezurquiza@gmail.com
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    GitPython==3.1.43
    ruamel.yaml>=0.15
    tomli>=1.1.0
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    add-branch-name = prepare_commit_msg_hooks.add_branch_name:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
