[metadata]
name = pre_commit_hooks
version = 0.0.1
description = Hooks for prepare-commit-msg.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/macfernandez/pre-commit-hooks
author = Macarena Fernandez Urquiza
author_email = m.fernandezurquiza@gmail.com
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    GitPython==3.1.43
python_requires = >=3.8

[options.extras_require]
dev =
    pytest==8.0.1
    pytest-cov==5.0.0

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    add-branch-name = pre_commit_hooks.add_branch_name:main

[bdist_wheel]
universal = True
